syntax="proto3";

package greet;
option go_package="./greetpb";

import "greet_msg.proto";

service GreetService {
  // unary rpc api
  rpc Greet(GreetRequest) returns (GreetResponse) {};

  /** server streaming rpc api
    * could have reused `GreetRequest` & `GreetResponse`
    * but api can evolve over time */

  // server streaming
  rpc GreetMultiServer(GreetMultiRequest) returns (stream GreetMultiResponse) {};

  // client streaming
  rpc GreetMultiClient(stream GreetMultiRequest) returns (GreetMultiResponse) {};

  // BiDi streaming
  rpc GreetEveryone(stream GreetMultiRequest) returns (stream GreetMultiResponse) {};
}
