syntax="proto3";

package sum;
option go_package="./sumpb";

message Sum {
  string first_number = 1;
  string second_number = 2;
}

message SumRequest {
  Sum sum = 1;
}

message SumResponse {
  string result = 1;
}
